[package]
name = "rust_web_scraping_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
reqwest = { version = "0.11.18", default-features = false, features = ["rustls-tls"] }
select = "0.6.0"
tokio = {version = "1.29.1", features = ["full"]}
